new landing page

--- a/public/index.html
+++ b/public/index.html
@@ -39,11 +39,6 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="email">Email Address *</label>
-                    <input type="email" id="email" name="email" required placeholder="john@example.com">
-                </div>
-
-                <div class="form-group">
                     <label for="homeAirport">Home Airport *</label>
                     <select id="homeAirport" name="homeAirport" required>
                         <option value="">Select your home airport</option>
@@ -63,6 +58,10 @@
                         <option value="MCO">Orlando (MCO)</option>
                         <option value="EWR">Newark (EWR)</option>
                     </select>
+                </div>
+
+                <div class="info-box">
+                    <p><strong>📧 Email notifications:</strong> Flight details will be sent to dheerajanikar.12@gmail.com</p>
                 </div>
 
                 <button type="submit" class="submit-btn" id="submitBtn">
@@ -96,9 +95,9 @@
                 <p>Find flights between any airports</p>
             </div>
             <div class="feature">
-                <div class="feature-icon">📧</div>
-                <h4>Email Details</h4>
-                <p>Get flight info sent to your email</p>
+                <div class="feature-icon">⏰</div>
+                <h4>Real-time Updates</h4>
+                <p>Get live delay and gate information</p>
             </div>
         </div>
 
